--- a/Northwind_project.ipynb
+++ b/Northwind_project.ipynb
@@ -371,6 +371,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "2d366036-42f9-449d-8a4d-341676b3b408",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# Question 5\n",
+    "The Pricing Team wants to know which products had an unit price increase and \n",
+    "the percentage increase was not between 20% and 30%. In order to help them they \n",
+    "asked you to provide them a list of products with:\n",
+    "\n",
+    "1. their product name\n",
+    "2. their current unit price (formatted to have only 2 decimals)\n",
+    "3. their previous unit price (formatted to have only 2 decimals)\n",
+    "4. their percentage increase as:\n",
+    "(New Number - Original Number) ÷ Original Number × 100 \n",
+    "(with the result formatted to an integer, e.g 50 for 50%)\n",
+    "\n",
+    "Filtered on the following conditions:\n",
+    "\n",
+    "1. their percentage increase is not between 20% and 30%\n",
+    "2. their total number of orders is greater than 10 orders\n",
+    "Finally order the results by percentage increase (ascending order)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "bfc2ae52-f40c-4d27-8082-df82d961f723",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1772013792305}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "products = pd.read_csv(\"./data/Northwind_dataset/products.csv\")\n",
+    "orders_details = pd.read_csv(\"./data/Northwind_dataset/orders_details.csv\")\n",
+    "\n",
+    "# First, merge the orders_details and products\n",
+    "df = orders_details[[\"productid\",\"unitprice\",\"quantity\",\"discount\"]].merge(\n",
+    "    products[[\"productid\",\"productname\",\"unitprice\"]],\n",
+    "    on=\"productid\",\n",
+    "    how=\"inner\",\n",
+    "    suffixes=(\"_product\", \"_order\"),\n",
+    ")\n",
+    "df = df[[\"productid\",\"productname\",\"quantity\",\"discount\",\"unitprice_product\",\"unitprice_order\"]]\n",
+    "#calculate the price increasing in percentage\n",
+    "df[\"price_increas_percent\"] = ((df[\"unitprice_order\"] - df[\"unitprice_product\"]) / df[\"unitprice_product\"] * 100).round().astype(int)\n",
+    "\n",
+    "#use 1st filter condition\n",
+    "df = df[~df[\"price_increas_percent\"].between(20, 30)]\n",
+    "#use 2nd filter condition \n",
+    "df = df[df[\"quantity\"]>10]\n",
+    "df = df.sort_values(by=\"price_increas_percent\", ascending=False)\n",
+    "\n",
+    "display(df)\n",
+    "print(f\"len|gth of the dataset: {len(df)}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
