--- a/Northwind_project.ipynb
+++ b/Northwind_project.ipynb
@@ -454,8 +454,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
@@ -466,10 +465,81 @@
      "title": ""
     }
    },
+   "source": [
+    "# Question 6\n",
+    "The Pricing Team wants to know how each category performs according to their price range. \n",
+    "In order to help them they asked you to provide them a list of categories with:\n",
+    "\n",
+    "1. their category name\n",
+    "2. their price range as:\n",
+    "    “1.Below $20”\n",
+    "    “2. $20 - $50”\n",
+    "    “3. Over $50”\n",
+    "3. their total amount (formatted to be integer)\n",
+    "4. their number of orders\n",
+    "\n",
+    "Finally order the results by category name then price range (both ascending order)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "56fa02b7-9db6-4878-8d0a-8b71581f4db8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
-    "Q6"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "categories = pd.read_csv(\"./data/Northwind_dataset/categories.csv\")\n",
+    "products = pd.read_csv(\"./data/Northwind_dataset/products.csv\")\n",
+    "\n",
+    "df = categories.merge(products, on=\"categoryid\", how=\"inner\")\n",
+    "\n",
+    "# define price range at product level\n",
+    "bins = [0, 20, 50, np.inf]\n",
+    "labels = [\"1. Below $20\", \"2. $20 - $50\", \"3. Over $50\"]\n",
+    "df[\"price_range\"] = pd.cut(df[\"unitprice\"], bins=bins, labels=labels, right=True)\n",
+    "\n",
+    "# aggregate per category × price_range\n",
+    "result = (\n",
+    "    df.groupby([\"categoryname\", \"price_range\"])\n",
+    "      .agg(\n",
+    "          total_amount=(\"unitprice\", lambda x: int(x.sum())),\n",
+    "          number_of_orders=(\"productid\", \"count\")  # placeholder – really needs order details\n",
+    "      )\n",
+    "      .reset_index()\n",
+    "      .sort_values([\"categoryname\", \"price_range\"])\n",
+    ")\n",
+    "display(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "930c7464-3243-45a2-8a15-410ce8a3a068",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
